# geoserver_health_check_api

./: Dockerfile  config.ini  debug_api.py  docker_compose.yaml  pyproject.toml  test.json  test.py
api/: __init__.py  auth.py  logger.py  main.py
geoserver_check/: test_wms.py
geoserver_check_s2_rgb/: get_latest_stac_images.py  test_wms.py
test/: aoi.geojson  aws_rgb.tif  geoserver.tif
