[tool.poetry]
name = "geoserver_health_check"
version = "0.0.1"
description = ""
authors = ["david-eidmann <david.eidmann@coramaps.com>"]
readme = "readme.md"


[tool.poetry.dependencies]
python = ">=3.11,<3.12" 
psycopg2-binary = ">=2.9.9"
pystac = ">=1.7.3"
tqdm = ">=4.64.0"
python-dateutil = ">=2.8.2"
requests = ">=2.28.1"
pystac-client = ">=0.6.1"
tox = "^4.11.1"
black = "^23.7.0"
numpy = "^1.26.0"
pandas = "^2.1.1"
geopandas = "^1.0.0"
rasterio = "^1.3.8"
shapely = "^2.0.4"
matplotlib = "^3.8.0"
jupyter = "^1.0.0"
openpyxl = "^3.1.2"
mypy = "^1.5.1"
pandas-stubs = "^2.1.1.230928"
scipy = "^1.11.3"
ipywidgets = "^8.1.1"
validators = "^0.28.3"
gdal = "3.3.0"
sortedcontainers = "^2.4.0"
seaborn = "^0.13.0"
pydantic = "^2.5.3"
blake3 = "^0.4.1"
geojson = "^3.1.0"
geojson-rewind = "^1.1.0"
rioxarray = "^0.15.1"
pydot = "^2.0.0"
graphviz = "^0.20.1"
fiona = "^1.9.5"
scikit-learn = "^1.4.0"
scikit-image = "^0.22.0"
json-schema-for-humans = "^0.47"
keras-nlp = "^0.7.0"
dill = "^0.3.8"
pathos = "^0.3.2"
plotly = "^5.21.0"
pyogrio = "^0.8.0"
pyarrow = "^16.1.0"
prettytable = "^3.10.0"
pydotplus = "^2.0.2"
opencv-python = "^4.11.0.86"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"
pytest = "^8.3.2"
bump-my-version = "^0.28.0"


[tool.ruff]
    line-length = 100
    target-version = "py312"

[tool.ruff.lint]
    unfixable = ["F401"]
    extend-select = [
        "UP",  # pyupgrade
        "D",   # pydocstyle
        "W",    # pycodestyle (warnings)
        "SIM" # simplify
        ]
    
    ignore = [
                "D100", #// Missing doc on public modules
                "D101", #//Missing docstring in public class
                "D102", #//Missing docstring in public method
                "D103", #//Missing docstring in public function
                "D105", #//Missing docstring in magic method
                "D107", #//Missing docstring in __init__
                "SIM102", #//  Use a single `if` statement instead of nested `if` statementsRuffSIM102
                "SIM108", #//  if else simplofication
                "W293", #// blank line contains whitespace
            ]

[tool.ruff.lint.pydocstyle]
convention = "google"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
